@@ -103,9 +103,11 @@ data:extend({
   {
     type = "fluid",
     name = "angels-water-yellow-waste",
+    --Icons include their respective cleaned counterpart
     icons = angelsmods.functions.create_viscous_liquid_fluid_icon(
-      nil,
-      { { 116, 140, 211 }, { 255, 219, 051 }, { 109, 070, 020, 0.8 }, { 254, 204, 049 } }
+      mods["angelspetrochem"] and { icon = "__angelspetrochemgraphics__/graphics/icons/solid-sulfur.png", icon_size = 32 } or {"__base__/graphics/icons/sulfur.png"},
+      { { 116, 140, 211 }, { 255, 219, 051 }, { 109, 070, 020, 0.8 }, { 254, 204, 049 } },
+      true
     ),
     subgroup = "angels-water-cleaning-fluid",
     order = "a",
@@ -118,9 +120,11 @@ data:extend({
   {
     type = "fluid",
     name = "angels-water-red-waste",
+    --Icons include their respective cleaned counterpart
     icons = angelsmods.functions.create_viscous_liquid_fluid_icon(
-      nil,
-      { { 116, 140, 211 }, { 155, 063, 061 }, { 109, 070, 020, 0.8 }, { 124, 050, 048 } }
+      mods["angelspetrochem"] and { icon = "__angelspetrochemgraphics__/graphics/icons/solid-sodium-nitrate.png", icon_size = 32 } or nil,
+      { { 116, 140, 211 }, { 155, 063, 061 }, { 109, 070, 020, 0.8 }, { 124, 050, 048 } },
+      true
     ),
     subgroup = "angels-water-cleaning-fluid",
     order = "d",
@@ -133,9 +137,11 @@ data:extend({
   {
     type = "fluid",
     name = "angels-water-green-waste",
+    --Icons include their respective cleaned counterpart
     icons = angelsmods.functions.create_viscous_liquid_fluid_icon(
-      nil,
-      { { 116, 140, 211 }, { 102, 204, 049 }, { 109, 070, 020, 0.8 }, { 096, 207, 052 } }
+      { icon = "__angelsrefininggraphics__/graphics/icons/solid-salt.png", icon_size = 32 },
+      { { 116, 140, 211 }, { 102, 204, 049 }, { 109, 070, 020, 0.8 }, { 096, 207, 052 } },
+      true
     ),
     subgroup = "angels-water-cleaning-fluid",
     order = "c",
@@ -148,9 +154,11 @@ data:extend({
   {
     type = "fluid",
     name = "angels-water-greenyellow-waste",
+    --Icons include their respective cleaned counterpart
     icons = angelsmods.functions.create_viscous_liquid_fluid_icon(
-      nil,
-      { { 116, 140, 211 }, { 218, 253, 064 }, { 109, 070, 020, 0.8 }, { 173, 210, 042 } }
+      { icon = "__angelsrefininggraphics__/graphics/icons/ore-fluorite.png", icon_size = 32 },
+      { { 116, 140, 211 }, { 218, 253, 064 }, { 109, 070, 020, 0.8 }, { 173, 210, 042 } },
+      true
     ),
     subgroup = "angels-water-cleaning-fluid",
     order = "b",
@@ -194,9 +202,13 @@ data:extend({
   {
     type = "fluid",
     name = "angels-water-heavy-mud",
-    icons = angelsmods.functions.create_viscous_liquid_fluid_icon(
-      nil,
-      { { 070, 133, 232 }, { 117, 089, 036 }, { 102, 076, 029, 0.8 }, { 102, 076, 029, 0.8 } }
+    --adds number to icon to better distinguish
+    icons = angelsmods.functions.add_number_icon_layer(
+      angelsmods.functions.create_viscous_liquid_fluid_icon(
+        nil,
+        { { 070, 133, 232 }, { 117, 089, 036 }, { 102, 076, 029, 0.8 }, { 102, 076, 029, 0.8 } }
+      ),
+      1, angelsmods.refining.number_tint
     ),
     subgroup = "angels-water-washing-fluid",
     order = "b",
@@ -209,9 +221,13 @@ data:extend({
   {
     type = "fluid",
     name = "angels-water-concentrated-mud",
-    icons = angelsmods.functions.create_viscous_liquid_fluid_icon(
-      nil,
-      { { 070, 133, 232 }, { 070, 133, 232 }, { 109, 070, 020, 0.8 }, { 109, 070, 020, 0.8 } }
+    --adds number to icon to better distinguish
+    icons = angelsmods.functions.add_number_icon_layer(
+      angelsmods.functions.create_viscous_liquid_fluid_icon(
+        nil,
+        { { 070, 133, 232 }, { 070, 133, 232 }, { 109, 070, 020, 0.8 }, { 109, 070, 020, 0.8 } }
+      ),
+      2, angelsmods.refining.number_tint
     ),
     subgroup = "angels-water-washing-fluid",
     order = "c",
@@ -224,9 +240,13 @@ data:extend({
   {
     type = "fluid",
     name = "angels-water-light-mud",
-    icons = angelsmods.functions.create_viscous_liquid_fluid_icon(
-      nil,
-      { { 109, 070, 020 }, { 109, 070, 020 }, { 070, 133, 232, 0.8 }, { 070, 133, 232, 0.8 } }
+    --adds number to icon to better distinguish
+    icons = angelsmods.functions.add_number_icon_layer(
+      angelsmods.functions.create_viscous_liquid_fluid_icon(
+        nil,
+        { { 109, 070, 020 }, { 109, 070, 020 }, { 070, 133, 232, 0.8 }, { 070, 133, 232, 0.8 } }
+      ),
+      3, angelsmods.refining.number_tint
     ),
     subgroup = "angels-water-washing-fluid",
     order = "d",
@@ -239,9 +259,13 @@ data:extend({
   {
     type = "fluid",
     name = "angels-water-thin-mud",
-    icons = angelsmods.functions.create_viscous_liquid_fluid_icon(
-      nil,
-      { { 039, 112, 194 }, { 109, 070, 020 }, { 070, 133, 232, 0.8 }, { 070, 133, 232, 0.8 } }
+    --adds number to icon to better distinguish
+    icons = angelsmods.functions.add_number_icon_layer(
+      angelsmods.functions.create_viscous_liquid_fluid_icon(
+        nil,
+        { { 039, 112, 194 }, { 109, 070, 020 }, { 070, 133, 232, 0.8 }, { 070, 133, 232, 0.8 } }
+      ),
+      4, angelsmods.refining.number_tint
     ),
     subgroup = "angels-water-washing-fluid",
     order = "e",
